# rostware23

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: current_team.rs  random_state.rs
rostware23_lib/: Cargo.toml
rostware23_lib/benches/: current_team.rs  has_team_any_moves.rs  perform_random_moves.rs  possible_moves.rs  possible_moves_for_team_one.rs  random_state.rs
rostware23_lib/src/: lib.rs
rostware23_lib/src/game/: board.rs  board_bitset.rs  board_coordinates.rs  common.rs  direction.rs  mod.rs  move_generator.rs  moves.rs  penguin.rs  penguin_bitset.rs  penguin_collection.rs  possible_moves.rs  protocol.rs  protocol_error.rs  result.rs  server.rs  server_side_message.rs  state.rs  state_generator.rs
rostware23_lib/src/util/: rng.rs
rostware23_lib/src/xml/: common.rs  connection.rs  data.rs  error.rs  mod.rs  moves.rs  result.rs  room.rs  state.rs
src/: main.rs
src/cmdline/: mod.rs
src/game/: board.rs  board_bitset.rs  common.rs  mod.rs  moves.rs  penguin.rs  penguin_bitset.rs  penguin_collection.rs  possible_moves.rs  protocol.rs  result.rs  server.rs  server_side_message.rs  state.rs
src/logic/: battle.rs  bitset_penguin_restrictions.rs  board_parser.rs  combined_rater.rs  early_game_rater.rs  edge_penguin_penalty.rs  fish_difference_rater.rs  mod.rs  ordered_move_generator.rs  penguin_cutoff_rater.rs  penguin_restrictions.rs  potential_fish_rater.rs  pvs_getter.rs  quadrant_occupation_rater.rs  random_getter.rs  reachable_fish_rater.rs  restricted_reachable_fish_rater.rs  selective_transposition_table.rs  simple_transposition_table.rs  (+5 more)
(+10 files in other folders)
