[package]
name = "rostware23_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

rand = "0.8.5"

instant-xml-macros = "0.3.1"
instant-xml = "0.3.1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "random_state"
harness = false

[[bench]]
name = "possible_moves"
harness = false

[[bench]]
name = "current_team"
harness = false

[[bench]]
name = "possible_moves_for_team_one"
harness = false
